# metadata_agent

./: .gitignore  makefile  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt
demo/: README.md
demo/pages/: metadata_generation.py
demo/workflows/: metadata_generation.py
docs/: README.md  architecture.md  conf.py  index.md  tutorial.md
notebooks/: plan_execution_log.txt  planning_log.txt  test_csv_datasource.ipynb  test_orchestrator.ipynb  test_steps.ipynb  test_surf.ipynb
notebooks/legacy/: plan_execution_log.txt  planning_log.txt  test_csv_datasource.ipynb
scratch/: README.md  completion.py  connection.py  generation.py
src/: __init__.py  config.py  global_utils.py  main.py  standards.py  topology.py
src/context/: __init__.py  base_context.py  context_classifier.py  context_factory.py  csv_context.py  registry.py  sqlite_context.py
src/core/: __init__.py  schemas.py  state.py
src/orchestrator/: __init__.py  orchestrator.py  plan_executor.py  prompts.py  step_executor.py  utils.py
src/players/: __init__.py  configs.py  player.py
src/tools/: __init__.py  context_tools.py
tests/: test_connections.py
